--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,11 +28,17 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-
+  font_awesome_flutter:
+  stacked:
+  stacked_themes:
+  stacked_services:
+  get_it:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  stacked_generator:
+# flutter pub run build_runner build
+  build_runner:
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -43,7 +49,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  assets:
+    - assets/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
