--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,11 +67,19 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+  fonts:
+    - family: GTWalsheimPro
+      fonts:
+        - asset: assets/fonts/GTWalsheimPro-UltraLight.ttf
+          weight: 400
+        - asset: assets/fonts/GTWalsheimPro-Medium.ttf
+          weight: 800
+    - family: Open Sans
+      fonts:
+        - asset: assets/fonts/OpenSans-ExtraBold.ttf
+          weight: 800
+        - asset: assets/fonts/OpenSans-Regular.ttf
+          weight: 400
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
